--- a/Association Rules.ipynb
+++ b/Association Rules.ipynb
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        "   'amount': 0.0}]}"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "23288"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -444,8 +444,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Node number: 231\n",
-      "Edge number: 571\n"
+      "Node number: 168\n",
+      "Edge number: 2182\n"
      ]
     }
    ],
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -491,10 +491,10 @@
     {
      "data": {
       "text/plain": [
-       "231"
+       "168"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -554,10 +554,10 @@
     {
      "data": {
       "text/plain": [
-       "35"
+       "17"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -577,75 +577,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "（新）銷售用購物袋１８號袋 伯朗咖啡 蘋果冰茶 御茶園特上奶茶 保力達蠻牛維他命Ｂ飲料 麥香錫蘭奶茶 全家紅豆麵包 奶油雞排歐姆蛋燴飯 鹼性離子水 衛生冰 麥香奶茶ＴＰ３００ 茶裏王日式綠茶 台鹽海洋鹼性離子水 金牌台灣啤酒 冷泡茶冷萃綠茶無糖 全家克林姆麵包 蔥爆牛肉燴飯 可口可樂ＰＥＴ 純喫茶鮮柚綠茶６５０ｍｌ 寶礦力水得 茶裏王英式紅茶 雲絲頓紅１０毫克香煙 金蘋果調味乳蘋果風味 金牌台啤罐裝（６入） 義美奶茶 藍山咖啡 純喫茶紅茶 （新）４５號銷售用購物袋 冷泡茶冰釀烏龍 飲冰室茶集綠奶茶 飲冰室茶集紅奶茶 統一布丁（雞蛋口味） 科學麵 泡沫綠茶ＴＰ３００ 純喫茶無糖綠茶６５０ｍｌ 麥香綠茶ＴＰ３００ 義美錫蘭紅茶 麥香阿薩姆奶茶 紫米紅豆湯圓 麥香紅茶ＴＰ３００ 金牌台灣啤酒５００ＭＬ 原萃日式綠茶 ＦＩＮ深海健康補給飲料 皇家奶茶 貝納頌經典拿鐵 海苔肉鬆沙拉麵包 舒跑運動飲料ＰＥＴ 天然水２．２Ｌ 泡沫紅茶ＴＰ３００ 日式蒜香燒豚飯 葡萄冰茶 長壽黃硬盒香煙 純喫茶綠茶６５０ｍｌ 咖啡廣場奶香特調咖啡 天然水 芒果冰茶 七星１０毫克硬盒香煙 純喫茶紅茶６５０ｍｌ\n",
+      "977-行銷部贈品 322-未滿１００％果汁 332-碳酸飲料 314-奶茶 391-夾心餅 341-機能飲料 344-其他水 362-顆粒狀巧克力 291-冷藏茶飲料 691-衛生紙 315-其他茶 918-支付折扣促銷券 343-水 132-冷藏原果（免稅） 07-停車費 121-涼麵２配 682-醫療用品 312-綠茶 237-衛生冰塊 584-進口淡煙 495-其他嗜好食品 586-進口涼煙 607-進口調酒 481-補品 333-其他嗜好飲料 323-蔬菜汁 331-咖啡飲料 293-冷藏咖啡 841-一般日報 342-運動飲料 582-國產濃煙 832-霹靂布袋戲 313-烏龍茶 792-抽煙用品 722-家雜用品 122-熱食麵２配 585-進口濃煙 843-財經報 442-湯 404-花生瓜子 352-無糖口香糖 311-紅茶 616-即飲調酒 482-健康食品 351-一般口香糖 611-國產啤酒 412-豆干 581-國產淡煙 813-虛擬遊戲卡 612-進口啤酒 601-進口威士忌\n",
       "==================\n",
-      "熱美式中杯 養樂多 頂級鮮奶優格－莓果穀物脆片 蕃薯（２５元） 香蕉單入 肉鬆起酥麵包 特濃咖啡拿鐵 蝦皮取件Ｃ 蕃薯（３０元） 雪花蛋糕 麥香奶茶（罐裝） 經典原味熱狗 大口奶油蕈菇起司雞排飯糰 肉鬆飯糰 光泉無加糖鮮豆漿 熱拿鐵大杯 全家熱狗麵包 茶葉蛋（銷售用） 重黑巧克力蛋糕 爆濃起司熱狗 蕃薯（２０元） 番薯（３５元） 蕃薯（１５元） 統一陽光無糖高纖豆漿 ＬＣＡ活菌原味發酵乳 光泉米漿 熱美式小杯 簡單點原味優酪乳 特濃黑可可 熱美式大杯 熱拿鐵中杯 綠豆沙牛乳 黑胡椒熱狗 林鳳營全脂鮮乳 全家花生夾心土司（２入） 鮮奶茶 義美古早傳統無糖豆奶 商店街取件 光泉無加糖黑豆漿 義美全脂鮮乳２３６ｍｌ 熱拿鐵小杯 簡單點無加糖優酪乳 統一大布丁（雞蛋口味） ＦＰ取件 ＥＣ代收一 鮪魚飯糰 特濃抹茶拿鐵 大口法香烤雞飯糰 冰拿鐵大杯\n",
+      "171-布丁 226-茶葉蛋 294-冷藏豆米漿 072-手卷 192-蛋糕 091-中式主食 295-其他冷藏飲料 196-常溫茶點 938-活動贈品 193-家庭號吐司餐包 133-常溫原果（免稅） 061-飯糰 092-西式主食 094-粥品 296-冷藏奶茶 191-小吐司餐包 183-鹹麵包 065-飯糰４度Ｃ 182-丹麥麵包 153-微波湯品 163-火腿香腸 726-其他節令商品 271-大包裝全脂鮮乳 155-微波小吃 272-小包裝全脂鮮乳 012-杯裝飲料 176-手工甜點 106-三明治４度Ｃ 297-冷藏常溫飲料 124-義大利麵 107-調理麵包４度Ｃ 721-餐具用品 15-E商品 241-冷凍調理 195-小朋友麵包 181-甜麵包 131-截切水果 042-蕃薯食品 154-小菜 177-甜湯飲品 141-沙拉 292-冷藏果汁 071-壽司 286-發酵乳 321-１００％果汁 093-日式主食 282-小包裝調味乳 281-大包裝調味乳 172-優格 041-燒烤熱狗 275-小包裝低脂鮮乳 083-便當４℃ 285-小包裝優酪乳\n",
       "==================\n",
-      "午后時光鐵觀音奶茶 午后時光王室大吉嶺奶茶 午后時光皇家伯爵奶茶\n",
+      "14-銀行分期款 911-全錄影印 05-產險 18-代碼繳費 16-其它類 03-水費 06-有線電視 09-監理所 916-服務手續費 02-電費 12-銀行學雜費 17-燃料稅 11-信用卡 01-智慧卡 13-稅款 10-人壽險 04-電信費 08-瓦斯\n",
       "==================\n",
-      "冰鎮檸檬紅茶６５０ｍｌ 冰鎮芭樂綠茶６５０ｍｌ\n",
+      "525-預購訂購到店\n",
       "==================\n",
-      "Ｃｒｅａｍ－Ｏ黑巧克力三明治餅 促銷券０６ 伊藤園蘋果紅茶 頑皮滷蛋－原味\n",
+      "051-一般魚漿製品 056-常溫商品 054-蔬菜類製品\n",
       "==================\n",
-      "戰禍邪神第１１章 戰禍邪神第１２章\n",
+      "373-兒童糖果 401-海產製品 365-其他巧克力 435-袋麵 383-袋裝零食 395-棒狀餅乾 385-米果仙貝 364-兒童巧克力 231-冰棒 411-蜜餞 371-機能性糖果 392-威化餅 372-一般糖果 431-大杯麵 235-高級冰品 361-條狀巧克力 386-其他零食 232-杯冰 432-小杯麵 397-糕點類 381-袋裝洋芋片 433-大碗麵 382-盒罐裝洋芋片 403-堅果 434-小碗麵 396-煎薄派酥\n",
       "==================\n",
-      "關東煮本舖拉麵 手工高麗菜捲 究極味付蛋 讚岐烏龍麵 海鮮魚卵棒 日式黑輪 關東煮本舖冬粉 野菜多多魚餅 特級花枝丸 鮮香菇 旗魚黑輪 筊白筍 蟹肉糰子 黃金魚豆腐 王子麵 千層玉子燒 白玉蘿蔔 杏鮑菇 黃金厚切魚板\n",
+      "661-彩妝用品 664-美妝雜貨\n",
       "==================\n",
-      "台鐵取票 台鐵手續費\n",
+      "731-狗食\n",
       "==================\n",
-      "健保費代收 國民年金代 玉山信用卡 合庫瓦斯費 中信有線代 聯邦信用卡 花旗信用卡 欣中天然氣 代收手續費４ 台灣電力 地方查核稅款 台灣大哥大 亞太電信代 國泰世華卡 欣林瓦斯費 勞工退休金 台灣自來水 勞保費代收 遠傳電信 富邦信用卡 中華電信 台新信用卡 台中二段停\n",
+      "732-貓食\n",
       "==================\n",
-      "紅標料理米酒 空瓶回收（銷售用）\n",
+      "753-筆\n",
       "==================\n",
-      "雅虎拍賣寄件 蝦皮寄件Ｆ 商店街寄件Ｆ 店到店雅虎拍賣手續費\n",
+      "27-票券 26-店到店 897-資訊服務手續費\n",
       "==================\n",
-      "台中裁即銷罰 交通罰鍰代收即銷手續費\n",
+      "028-活動贈品 021-霜淇淋\n",
       "==================\n",
-      "促銷券１０ ＭＭ花生巧克力\n",
+      "451-珍味瓶\n",
       "==================\n",
-      "奶香綠茶３３０ＭＬ ＡＷ極酷嗆涼紫冰野莓口香糖 超涼口香糖（袋） 優格軟糖（Ｐｅａｃｈ） 優格軟糖（Ｏｒａｎｇｅ） 潤喉糖－蜂蜜檸檬 代收折價卷\n",
+      "621-空瓶 591-國產料理酒\n",
       "==================\n",
-      "蝦皮寄件Ｗ 露天寄件Ｗ 店到店雅虎拍賣線上手續費 雅虎線上寄件 商店街寄件Ｗ\n",
+      "014-冰沙飲料\n",
       "==================\n",
-      "ＦＰ店到店 店到店ＦＰ手續費\n",
+      "802-電子票證（交通票卡）\n",
       "==================\n",
-      "合庫代１５ 玉山淘寶款 中信外１５ 代收手續費１５ 雅虎拍賣繳費\n",
-      "==================\n",
-      "牛奶杏仁乳加 黑巧杏仁乳加\n",
-      "==================\n",
-      "代收手續費６ 台中裁罰單 台銀學雜費\n",
-      "==================\n",
-      "焗烤鮪魚歐姆蛋三明治 貝納頌海鹽風味拿鐵\n",
-      "==================\n",
-      "原味ＹＵＲＯＣＫ魚薯條無 辣味ＹＵＲＯＣＫ魚薯條無\n",
-      "==================\n",
-      "國光購票 國光客運手續費\n",
-      "==================\n",
-      "高鐵手續費 高鐵取票\n",
-      "==================\n",
-      "代收手續費５ 通行繳費 ｅＴａｇ繳費\n",
-      "==================\n",
-      "麥香奶茶ＴＰ３７５ 麥香紅茶ＴＰ３７５\n",
-      "==================\n",
-      "能多益隨手杯 促銷券０９\n",
-      "==================\n",
-      "熱美式中杯－票券優惠專用 票券優惠條碼１\n",
-      "==================\n",
-      "渣打一般３ 代收手續費１３\n",
-      "==================\n",
-      "健達奇趣蛋單顆（女孩版） 健達奇趣蛋單顆（男孩版）\n",
-      "==================\n",
-      "代收手續費２５ 寶物交易代\n",
-      "==================\n",
-      "統聯客運購票 統聯客運手續費 統聯客運取票\n",
-      "==================\n",
-      "聯合報 自由時報 蘋果日報\n",
-      "==================\n",
-      "遠銀一般代Ｚ 代收手續費１０\n",
-      "==================\n",
-      "火腿青蔬洋芋沙拉 千島醬\n",
-      "==================\n",
-      "樂事鹽烤蒜味洋芋片－日本版 大波浪炙燒海鮮味洋芋片\n",
+      "175-常溫甜點\n",
       "==================\n"
      ]
     }
@@ -659,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -667,10 +631,10 @@
     {
      "data": {
       "text/plain": [
-       "0.6625472802880235"
+       "0.47719503798400253"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
@@ -702,19 +666,19 @@
     {
      "data": {
       "text/plain": [
-       "[{'name': '（新）銷售用購物袋１８號袋', 'betweeness': 5390.0},\n",
-       " {'name': '茶葉蛋（銷售用）', 'betweeness': 4178.0},\n",
-       " {'name': '統一大布丁（雞蛋口味）', 'betweeness': 3035.0},\n",
-       " {'name': '促銷券０６', 'betweeness': 987.0},\n",
-       " {'name': '代收折價卷', 'betweeness': 680.0},\n",
-       " {'name': '熱拿鐵中杯', 'betweeness': 564.0},\n",
-       " {'name': '肉鬆飯糰', 'betweeness': 440.0},\n",
-       " {'name': '蝦皮取件Ｃ', 'betweeness': 344.0},\n",
-       " {'name': '經典原味熱狗', 'betweeness': 343.0},\n",
-       " {'name': '鮪魚飯糰', 'betweeness': 338.0}]"
+       "[{'name': '15-E商品', 'betweeness': 7319.500000000003},\n",
+       " {'name': '722-家雜用品', 'betweeness': 3450.0},\n",
+       " {'name': '11-信用卡', 'betweeness': 2555.333333333335},\n",
+       " {'name': '918-支付折扣促銷券', 'betweeness': 2189.333333333333},\n",
+       " {'name': '07-停車費', 'betweeness': 2077.833333333333},\n",
+       " {'name': '916-服務手續費', 'betweeness': 1773.0},\n",
+       " {'name': '10-人壽險', 'betweeness': 1723.0},\n",
+       " {'name': '02-電費', 'betweeness': 1488.0833333333333},\n",
+       " {'name': '04-電信費', 'betweeness': 1333.5833333333335},\n",
+       " {'name': '18-代碼繳費', 'betweeness': 982.0}]"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,246 +689,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[54,\n",
-       " 1,\n",
-       " 1,\n",
+       "[1,\n",
+       " 22,\n",
+       " 16,\n",
        " 5,\n",
-       " 1,\n",
+       " 35,\n",
+       " 55,\n",
+       " 66,\n",
+       " 4,\n",
+       " 48,\n",
+       " 11,\n",
+       " 27,\n",
+       " 0,\n",
+       " 44,\n",
+       " 2,\n",
+       " 8,\n",
+       " 87,\n",
+       " 2,\n",
+       " 35,\n",
+       " 2,\n",
+       " 16,\n",
+       " 7,\n",
+       " 16,\n",
+       " 32,\n",
+       " 2,\n",
+       " 15,\n",
+       " 58,\n",
        " 1,\n",
        " 1,\n",
        " 3,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
+       " 21,\n",
        " 2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 15,\n",
-       " 15,\n",
-       " 1,\n",
-       " 10,\n",
-       " 1,\n",
+       " 4,\n",
+       " 20,\n",
+       " 21,\n",
        " 1,\n",
        " 4,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 10,\n",
-       " 5,\n",
-       " 5,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 5,\n",
-       " 2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 5,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 5,\n",
-       " 2,\n",
-       " 3,\n",
-       " 5,\n",
-       " 1,\n",
        " 12,\n",
+       " 2,\n",
+       " 8,\n",
+       " 9,\n",
+       " 3,\n",
+       " 1,\n",
+       " 0,\n",
+       " 6,\n",
+       " 0,\n",
+       " 41,\n",
+       " 10,\n",
        " 4,\n",
+       " 73,\n",
+       " 55,\n",
+       " 27,\n",
+       " 54,\n",
        " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 3,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 3,\n",
        " 15,\n",
+       " 69,\n",
+       " 26,\n",
+       " 19,\n",
+       " 1,\n",
+       " 14,\n",
+       " 2,\n",
+       " 2,\n",
        " 3,\n",
-       " 33,\n",
+       " 8,\n",
+       " 3,\n",
+       " 24,\n",
+       " 16,\n",
        " 6,\n",
        " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
        " 3,\n",
-       " 5,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 3,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 13,\n",
-       " 1,\n",
-       " 1,\n",
+       " 0,\n",
+       " 34,\n",
        " 4,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 14,\n",
        " 7,\n",
+       " 47,\n",
+       " 20,\n",
        " 2,\n",
+       " 42,\n",
        " 1,\n",
-       " 3,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 5,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
+       " 26,\n",
        " 4,\n",
-       " 5,\n",
-       " 12,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 8,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
+       " 46,\n",
+       " 23,\n",
        " 15,\n",
-       " 3,\n",
-       " 3,\n",
        " 1,\n",
-       " 2,\n",
-       " 4,\n",
-       " 2,\n",
-       " 13,\n",
-       " 2,\n",
+       " 0,\n",
+       " 10,\n",
+       " 54,\n",
        " 1,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 4,\n",
-       " 2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 11,\n",
-       " 14,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 12,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 3,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 3,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
+       " 24,\n",
        " 16,\n",
        " 1,\n",
+       " 3,\n",
        " 2,\n",
        " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
+       " 5,\n",
+       " 30,\n",
+       " 4,\n",
        " 15,\n",
+       " 10,\n",
+       " 1,\n",
+       " 8,\n",
+       " 102,\n",
+       " 1,\n",
+       " 24,\n",
        " 1,\n",
        " 1,\n",
-       " 1,\n",
-       " 14,\n",
+       " 48,\n",
+       " 8,\n",
        " 17,\n",
+       " 1,\n",
+       " 13,\n",
+       " 48,\n",
+       " 1,\n",
+       " 4,\n",
+       " 31,\n",
+       " 1,\n",
+       " 13,\n",
+       " 63,\n",
+       " 4,\n",
+       " 2,\n",
+       " 0,\n",
+       " 32,\n",
+       " 2,\n",
+       " 19,\n",
+       " 58,\n",
+       " 2,\n",
+       " 7,\n",
+       " 31,\n",
+       " 2,\n",
+       " 28,\n",
+       " 23,\n",
        " 1,\n",
        " 5,\n",
        " 1,\n",
+       " 3,\n",
+       " 55,\n",
+       " 29,\n",
+       " 4,\n",
+       " 1,\n",
+       " 26,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 71,\n",
+       " 3,\n",
        " 1,\n",
        " 4,\n",
        " 3,\n",
-       " 2,\n",
-       " 4,\n",
-       " 1,\n",
-       " 1,\n",
        " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 15,\n",
-       " 13,\n",
-       " 1,\n",
-       " 9,\n",
-       " 1,\n",
-       " 8,\n",
-       " 2,\n",
-       " 1,\n",
-       " 1,\n",
        " 4,\n",
        " 7,\n",
+       " 3,\n",
+       " 14,\n",
+       " 25,\n",
+       " 23,\n",
        " 1,\n",
-       " 1]"
+       " 4,\n",
+       " 23,\n",
+       " 5,\n",
+       " 19,\n",
+       " 7,\n",
+       " 12,\n",
+       " 13,\n",
+       " 0,\n",
+       " 19,\n",
+       " 0,\n",
+       " 1,\n",
+       " 22]"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
