--- a/Product Network.ipynb
+++ b/Product Network.ipynb
@@ -49,6 +49,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('5ceb55f7227c2680ca884f72'), 'items': [{'品號-品名稱': '19-吐司蛋糕', '群號-群名稱': '192-蛋糕', '銷售單價': 35.0, '單品名稱': '雞蛋牛奶捲', 'amount': 70.0}, {'品號-品名稱': '00-傳統代收', '群號-群名稱': '18-代碼繳費', '銷售單價': 0.0, '單品名稱': '代碼繳費１', 'amount': 0.0}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(purchase_list[1])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -59,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +86,7 @@
     "class ProductNerwork:\n",
     "    def __init__(self, graph):\n",
     "        self.graph = graph\n",
-    "        self.communities = graph.community_fastgreedy('weight').as_clustering()\n",
+    "        self.communities = graph.community_fastgreedy(weights='weight').as_clustering()\n",
     "        for index, vertex in enumerate(self.graph.vs):\n",
     "            vertex.update_attributes({ 'community': self.communities.membership[index], 'id': index })\n",
     "\n",
@@ -123,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +153,7 @@
     "    def __init__(self, purchase_list):\n",
     "        self.purchase_list = purchase_list\n",
     "    \n",
-    "    def convert(self, method='degree-price', support=0.001):\n",
+    "    def convert(self, method = 'degree-price', support=0.002):\n",
     "        support = int(len(self.purchase_list) * support)\n",
     "        result = {}\n",
     "        nodes = set()\n",
@@ -145,15 +164,35 @@
     "                length = len(edge_list)\n",
     "                for edge_dict_tuple in edge_list:\n",
     "                    edge = tuple([dic['單品名稱'] for dic in edge_dict_tuple])\n",
-    "                    weight = sum([dic['amount'] for dic in edge_dict_tuple]) / length\n",
-    "                    if edge in result or (edge[1], edge[0]) in result:\n",
-    "                        edge_in_list = edge if edge in result else (edge[1], edge[0])\n",
-    "                        result[edge_in_list]['count'] += 1\n",
-    "                        result[edge_in_list]['weight'] += weight\n",
+    "                    if method == 'degree-price':\n",
+    "                        weight = sum([dic['amount'] for dic in edge_dict_tuple]) / length\n",
+    "                        if edge in result or (edge[1], edge[0]) in result:\n",
+    "                            edge_in_list = edge if edge in result else (edge[1], edge[0])\n",
+    "                            result[edge_in_list]['count'] += 1\n",
+    "                            result[edge_in_list]['weight'] += weight\n",
+    "                        else:\n",
+    "                            result[edge] = {}\n",
+    "                            result[edge]['count'] = 1\n",
+    "                            result[edge]['weight'] = weight\n",
+    "                    elif method == 'adjust-degree':\n",
+    "                        weight = 1 / length\n",
+    "                        if edge in result or (edge[1], edge[0]) in result:\n",
+    "                            edge_in_list = edge if edge in result else (edge[1], edge[0])\n",
+    "                            result[edge_in_list]['count'] += 1\n",
+    "                            result[edge_in_list]['weight'] += weight\n",
+    "                        else:\n",
+    "                            result[edge] = {}\n",
+    "                            result[edge]['count'] = 1\n",
+    "                            result[edge]['weight'] = weight\n",
     "                    else:\n",
-    "                        result[edge] = {}\n",
-    "                        result[edge]['count'] = 1\n",
-    "                        result[edge]['weight'] = weight\n",
+    "                        weight =1\n",
+    "                        if edge in result or (edge[1], edge[0]) in result:\n",
+    "                            edge_in_list = edge if edge in result else (edge[1], edge[0])\n",
+    "                            result[edge_in_list]['count'] += 1\n",
+    "                        else:\n",
+    "                            result[edge] = {}\n",
+    "                            result[edge]['count'] = 1\n",
+    "                            result[edge]['weight'] = weight\n",
     "        for key in list(result.keys()):\n",
     "            if result[key]['count'] < support:\n",
     "                del result[key]\n",
@@ -181,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,16 +229,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
-    "product_network = converter.convert()"
+    "product_network = converter.convert('degree', 0.001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 169,
    "metadata": {
     "scrolled": true
    },
@@ -226,84 +265,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14504.052910052918\n",
-      "戰禍邪神第１２章 戰禍邪神第１１章\n",
+      "3.4285714285714284\n",
+      "黃金魚豆腐 千層玉子燒 手工高麗菜捲 白玉蘿蔔 究極味付蛋 海鮮魚卵棒 日式黑輪 旗魚黑輪 蟹肉糰子 關東煮本舖拉麵 讚岐烏龍麵 特級花枝丸 黃金厚切魚板\n",
       "==============\n",
-      "2512.6666666666665\n",
-      "ＦＰ店到店 店到店ＦＰ手續費\n",
+      "1.2857142857142858\n",
+      "台灣電力 玉山信用卡 台灣大哥大 國泰世華卡 花旗信用卡 欣林瓦斯費 健保費代收 台新信用卡 中華電信 台灣自來水 勞保費代收 國民年金代 代收手續費４\n",
       "==============\n",
-      "2102.6444444444446\n",
-      "空瓶回收（銷售用） 紅標料理米酒\n",
+      "1.0\n",
+      "蕃薯（１５元） 鮮奶茶 肉鬆飯糰 全家熱狗麵包 光泉米漿 蕃薯（２０元） 鮪魚飯糰 蕃薯（２５元） 經典原味熱狗 統一陽光無糖高纖豆漿 簡單點無加糖優酪乳 茶葉蛋（銷售用）\n",
       "==============\n",
-      "1832.2153812853812\n",
-      "促銷券０６ Ｃｒｅａｍ－Ｏ黑巧克力三明治餅 伊藤園蘋果紅茶 頑皮滷蛋－原味\n",
+      "0.875\n",
+      "麥香奶茶ＴＰ３００ （新）銷售用購物袋１８號袋 麥香紅茶ＴＰ３００ 伯朗咖啡 金牌台啤罐裝（６入） 金牌台灣啤酒 鹼性離子水\n",
       "==============\n",
-      "916.73667998668\n",
-      "蕃薯（１５元） 蕃薯（２０元） 蕃薯（２５元） 光泉米漿 簡單點無加糖優酪乳 茶葉蛋（銷售用） 鮪魚飯糰 肉鬆飯糰 鮮奶茶 全家熱狗麵包 統一陽光無糖高纖豆漿 經典原味熱狗\n",
+      "0.6666666666666666\n",
+      "雅虎拍賣繳費 合庫代１５ 中信外１５ 代收手續費１５ 玉山淘寶款\n",
       "==============\n",
-      "889.5\n",
-      "冰拿鐵大杯 熱拿鐵大杯\n",
+      "0.6\n",
+      "奶香綠茶３３０ＭＬ 代收折價卷 優格軟糖（Ｏｒａｎｇｅ） 優格軟糖（Ｐｅａｃｈ）\n",
       "==============\n",
-      "770.0\n",
-      "辣味ＹＵＲＯＣＫ魚薯條無 原味ＹＵＲＯＣＫ魚薯條無\n",
+      "0.6\n",
+      "頑皮滷蛋－原味 促銷券０６ 伊藤園蘋果紅茶 Ｃｒｅａｍ－Ｏ黑巧克力三明治餅\n",
       "==============\n",
-      "639.3333333333334\n",
-      "雅虎拍賣寄件 店到店雅虎拍賣手續費\n",
+      "0.5\n",
+      "自由時報 聯合報 蘋果日報\n",
       "==============\n",
-      "554.631746031746\n",
-      "金牌台啤罐裝（６入） 金牌台灣啤酒 麥香奶茶ＴＰ３００ 鹼性離子水 麥香紅茶ＴＰ３００ （新）銷售用購物袋１８號袋 伯朗咖啡\n",
-      "==============\n",
-      "491.5330471116187\n",
-      "日式黑輪 手工高麗菜捲 蟹肉糰子 海鮮魚卵棒 旗魚黑輪 特級花枝丸 究極味付蛋 黃金厚切魚板 黃金魚豆腐 關東煮本舖拉麵 千層玉子燒 白玉蘿蔔 讚岐烏龍麵\n",
-      "==============\n",
-      "432.5460317460317\n",
-      "台鐵取票 台鐵手續費\n",
-      "==============\n",
-      "408.5\n",
-      "玉山淘寶款 中信外１５ 代收手續費１５ 合庫代１５ 雅虎拍賣繳費\n",
-      "==============\n",
-      "385.8518518518519\n",
-      "高鐵取票 高鐵手續費\n",
-      "==============\n",
-      "333.1198412698413\n",
-      "ＭＭ花生巧克力 促銷券１０\n",
-      "==============\n",
-      "330.0\n",
-      "店到店雅虎拍賣線上手續費 雅虎線上寄件\n",
-      "==============\n",
-      "305.8333333333333\n",
-      "聯合報 自由時報 蘋果日報\n",
-      "==============\n",
-      "301.2962962962964\n",
-      "代收手續費２５ 寶物交易代\n",
-      "==============\n",
-      "286.87824632883456\n",
-      "代收折價卷 奶香綠茶３３０ＭＬ 優格軟糖（Ｐｅａｃｈ） 優格軟糖（Ｏｒａｎｇｅ）\n",
-      "==============\n",
-      "109.50000000000001\n",
+      "0.5\n",
       "代收手續費５ 通行繳費 ｅＴａｇ繳費\n",
       "==============\n",
-      "101.54829931972786\n",
-      "中華電信 勞保費代收 代收手續費４ 台灣電力 台新信用卡 欣林瓦斯費 花旗信用卡 健保費代收 台灣自來水 國民年金代 國泰世華卡 玉山信用卡 台灣大哥大\n",
+      "0.3333333333333333\n",
+      "戰禍邪神第１２章 戰禍邪神第１１章\n",
       "==============\n",
-      "47.55079365079365\n",
-      "代收手續費６ 台中裁罰單\n",
+      "0.3333333333333333\n",
+      "促銷券１０ ＭＭ花生巧克力\n",
+      "==============\n",
+      "0.3333333333333333\n",
+      "辣味ＹＵＲＯＣＫ魚薯條無 原味ＹＵＲＯＣＫ魚薯條無\n",
+      "==============\n",
+      "0.3333333333333333\n",
+      "空瓶回收（銷售用） 紅標料理米酒\n",
       "==============\n",
       "0.3333333333333333\n",
       "蝦皮寄件Ｆ 商店街寄件Ｆ\n",
       "==============\n",
       "0.3333333333333333\n",
-      "蝦皮取件Ｃ 商店街取件\n",
+      "店到店雅虎拍賣線上手續費 雅虎線上寄件\n",
+      "==============\n",
+      "0.3333333333333333\n",
+      "冰拿鐵大杯 熱拿鐵大杯\n",
+      "==============\n",
+      "0.3333333333333333\n",
+      "台中裁罰單 代收手續費６\n",
+      "==============\n",
+      "0.3333333333333333\n",
+      "寶物交易代 代收手續費２５\n",
+      "==============\n",
+      "0.3333333333333333\n",
+      "商店街取件 蝦皮取件Ｃ\n",
+      "==============\n",
+      "0.3333333333333333\n",
+      "店到店雅虎拍賣手續費 雅虎拍賣寄件\n",
+      "==============\n",
+      "0.3333333333333333\n",
+      "ＦＰ店到店 店到店ＦＰ手續費\n",
+      "==============\n",
+      "0.3333333333333333\n",
+      "台鐵取票 台鐵手續費\n",
       "==============\n",
       "0.3333333333333333\n",
       "商店街寄件Ｗ 蝦皮寄件Ｗ\n",
+      "==============\n",
+      "0.3333333333333333\n",
+      "高鐵手續費 高鐵取票\n",
       "==============\n"
      ]
     }
@@ -325,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,34 +373,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "127.0: 茶葉蛋（銷售用）\n",
-      "87.0 : （新）銷售用購物袋１８號袋\n",
-      "36.0 : 台灣自來水\n",
-      "33.0 : 中華電信 \n",
-      "32.0 : 鮪魚飯糰 \n",
-      "30.0 : 關東煮本舖拉麵\n",
-      "27.0 : 台新信用卡\n",
-      "27.0 : 白玉蘿蔔 \n",
-      "21.0 : 國泰世華卡\n",
-      "20.0 : 台灣大哥大\n",
-      "17.0 : 光泉米漿 \n",
-      "17.0 : 經典原味熱狗\n",
-      "11.0 : 代收手續費４\n",
-      "11.0 : 國民年金代\n",
+      "26.0 : 茶葉蛋（銷售用）\n",
+      "25.0 : 關東煮本舖拉麵\n",
+      "12.0 : 代收手續費４\n",
+      "8.0  : 中華電信 \n",
+      "7.0  : 蕃薯（２０元）\n",
+      "7.0  : 海鮮魚卵棒\n",
+      "7.0  : 經典原味熱狗\n",
       "6.0  : 代收手續費１５\n",
-      "3.0  : 代收折價卷\n",
-      "3.0  : 促銷券０６\n",
-      "2.0  : 蟹肉糰子 \n",
-      "1.0  : 代收手續費５\n",
-      "1.0  : 黃金厚切魚板\n",
-      "1.0  : 蘋果日報 \n"
+      "5.0  : 台灣自來水\n",
+      "1.0  : 促銷券０６\n"
      ]
     }
    ],
@@ -379,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,11 +416,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data.json', 'w', encoding='utf-8') as file:\n",
+    "with open('default.json', 'w', encoding='utf-8') as file:\n",
     "    file.write(data)"
    ]
   },
